examples/test/testpolicy13723.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13723
  namespace: namespace126
spec:
  podSelector:
    matchLabels:
      key16: value49
      key21: value39
      key48: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value20
      podSelector:
        matchLabels:
          key46: value41
          key22: value46
